# JNI-Demo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/hellojni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/hellojni/: MainActivity.java  SayHello.java
app/src/main/jni/: NativeHelloJNI.cpp
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/hellojni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
